--- a/VirtualCashier.css
+++ b/VirtualCashier.css
@@ -14,7 +14,7 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-    background-image: url("pictures/milktea.JPG"); 
+    background-image: url("pictures/love.jpg"); 
 }
 
 .openbtn {
@@ -234,7 +234,7 @@ body {
     box-shadow: 0 0 1em rgba(0, 0, 0, 0.2);
 }
 
-.header > .logo {
+.header > .logu {
     object-fit: contain;
     height: 60px;
 }
