--- a/VirtualCashier.css
+++ b/VirtualCashier.css
@@ -14,7 +14,7 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-    background-image: url("pictures/love.jpg"); 
+    background-image: url("love.jpg"); 
 }
 
 .openbtn {
