--- a/VirtualCashier.css
+++ b/VirtualCashier.css
@@ -13,7 +13,9 @@
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif; 
+    height: 30vh;
+    width:900%;
     background-image: url("love.jpg"); 
 }
 
